use correct source table for cond format paste, fdo#52340

Change-Id: I7c4cb1a5f31ba9e37a280af2243a13c57914cb2f